--- a/app/src/main/res/layout/activity_db_management.xml
+++ b/app/src/main/res/layout/activity_db_management.xml
@@ -21,6 +21,13 @@
             grid:columnCount="2">
 
             <Button
+                android:id="@+id/firstDBButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="First setup" />
+
+            <Button
                 android:id="@+id/syncDBButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
