logic applied if first time setup or not

--- a/app/src/main/res/layout/activity_db_management.xml
+++ b/app/src/main/res/layout/activity_db_management.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="HS-Sync" />
+                android:text="Save-Sync data" />
 
             <TextView
                 android:id="@+id/syncText"
@@ -80,7 +80,7 @@
             <EditText
                 android:id="@+id/publickey"
                 android:layout_width="180dp"
-                android:hint="identity"
+                android:hint="publickey"
                 android:inputType="text" />
 
             <Button
