--- a/app/src/main/res/layout/activity_healthspan.xml
+++ b/app/src/main/res/layout/activity_healthspan.xml
@@ -9,56 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:grid="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            grid:alignmentMode="alignBounds"
-            grid:columnCount="2">
-
-
-            <TextView
-                android:id="@+id/healthspanText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Health Span"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                grid:layout_columnSpan="2"
-                grid:layout_columnWeight="1" />
-
-            <TextView
-                android:id="@+id/simulationText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Simulation"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                grid:layout_columnSpan="2"
-                grid:layout_columnWeight="1" />
-
-            <TextView
-                android:id="@+id/chartText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Chart"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                grid:layout_columnSpan="2"
-                grid:layout_columnWeight="1" />
-
-            <EditText
-                android:id="@+id/tableText"
-                android:layout_width="180dp"
-                android:hint="Table"
-                android:inputType="text" />
-
-        </android.support.v7.widget.GridLayout>
-
     </ScrollView>
+
+    <WebView
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </RelativeLayout>
